/*
 * SonarQube
 * Copyright (C) 2009-2018 SonarSource SA
 * mailto:info AT sonarsource DOT com
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3 of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program; if not, write to the Free Software Foundation,
 * Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */
/* eslint-disable camelcase */
import * as React from 'react';
import { shallow } from 'enzyme';
import RepoWidgetNotConfigured from '../RepoWidgetNotConfigured';
import { isManualBindingAllowed, isRepoAdmin } from '../../utils';

jest.mock('../../utils', () => ({
  getRepoSettingsUrl: jest
    .fn()
    .mockResolvedValue(
      'https://bitbucketcloud.org/{}/{repo_uuid}/admin/addon/admin/app-key/repository-config'
    ),
  isRepoAdmin: jest.fn().mockReturnValue(true),
  isManualBindingAllowed: jest.fn().mockReturnValue(true)
}));

it('should display correctly for admin', async () => {
  const wrapper = shallow(<RepoWidgetNotConfigured />);
  expect(wrapper).toMatchSnapshot();

  await new Promise(setImmediate);
  wrapper.update();
  expect(wrapper).toMatchSnapshot();
});

it('should display correctly for non admin', () => {
  (isRepoAdmin as jest.Mock<any>).mockReturnValueOnce(false);
  expect(shallow(<RepoWidgetNotConfigured />)).toMatchSnapshot();
});

it('should display a link to SonarCloud for auto provisioning', () => {
  (isManualBindingAllowed as jest.Mock<any>).mockReturnValueOnce(false);
  expect(shallow(<RepoWidgetNotConfigured />)).toMatchSnapshot();
});
