// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a link to SonarCloud for auto provisioning 1`] = `
<React.Fragment>
  <div
    className="project-card-header"
  >
    <div
      className="project-card-header-inner"
    >
      <SonarCloudIcon
        size={24}
      />
      <h4
        className="spacer-left"
      >
        Code Quality
      </h4>
    </div>
  </div>
  <div
    className="spacer-top"
  >
    <React.Fragment>
      You have to
       
      <a
        href="/projects/create"
        rel="noopener noreferrer"
        target="_blank"
      >
        provision
      </a>
       
      a project in SonarCloud for this repository.
    </React.Fragment>
  </div>
</React.Fragment>
`;

exports[`should display correctly for admin 1`] = `
<React.Fragment>
  <div
    className="project-card-header"
  >
    <div
      className="project-card-header-inner"
    >
      <SonarCloudIcon
        size={24}
      />
      <h4
        className="spacer-left"
      >
        Code Quality
      </h4>
    </div>
  </div>
  <div
    className="spacer-top"
  >
    <React.Fragment>
      You have to link your repository with an existing SonarCloud project. Go to your
       
      repository settings
      .
    </React.Fragment>
  </div>
</React.Fragment>
`;

exports[`should display correctly for admin 2`] = `
<React.Fragment>
  <div
    className="project-card-header"
  >
    <div
      className="project-card-header-inner"
    >
      <SonarCloudIcon
        size={24}
      />
      <h4
        className="spacer-left"
      >
        Code Quality
      </h4>
    </div>
  </div>
  <div
    className="spacer-top"
  >
    <React.Fragment>
      You have to link your repository with an existing SonarCloud project. Go to your
       
      <a
        href="https://bitbucketcloud.org/{}/{repo_uuid}/admin/addon/admin/app-key/repository-config"
        rel="noopener noreferrer"
        target="_parent"
      >
        repository settings
      </a>
      .
    </React.Fragment>
  </div>
</React.Fragment>
`;

exports[`should display correctly for non admin 1`] = `
<React.Fragment>
  <div
    className="project-card-header"
  >
    <div
      className="project-card-header-inner"
    >
      <SonarCloudIcon
        size={24}
      />
      <h4
        className="spacer-left"
      >
        Code Quality
      </h4>
    </div>
  </div>
  <div
    className="spacer-top"
  >
    Contact a repository administrator to link the repository with a SonarCloud project.
  </div>
</React.Fragment>
`;
